--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: project
   datasource:
-    url: jdbc:postgresql://localhost:5432/sandBox
+    url: jdbc:postgresql://localhost:5432/postgres
     username: ${JDBC_USER}
     password: ${JDBC_PASSWORD}
   jpa:
